--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:orientation="vertical"
-                android:gravity="top"
                 tools:context="com.exclus.smsshortcut.app.MainActivity">
 
   <View android:id="@+id/strut"
@@ -19,7 +18,7 @@
       android:id="@+id/phoneInputBox"
       android:hint="@string/to"
       android:layout_width="200dp"
-      android:layout_height="50dp"
+      android:layout_height="45dp"
       android:layout_toRightOf="@id/strut"
       android:layout_alignParentLeft="true"
       android:layout_toLeftOf="@+id/addButton"/>
@@ -39,38 +38,55 @@
       android:layout_below="@id/phoneInputBox"
       android:text="@string/phones"/>
 
-  <ListView android:id="@+id/phonesListView"
+  <RelativeLayout
+                  android:id="@+id/smsContainer"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:gravity="bottom"
+                  android:layout_alignParentBottom="true">
+    <EditText
+        android:id="@+id/smsMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:hint="@string/smsMessage"/>
 
-            android:layout_height="300dp"
-            android:layout_below="@id/phonesText"
-            android:longClickable="true"
-            android:layout_width="match_parent"/>
+    <View android:id="@+id/strut1"
+          android:layout_width="0dp"
+          android:layout_height="0dp"
+          android:layout_below="@id/smsMessage"
+          android:layout_centerHorizontal="true"/>
 
+    <EditText
+        android:id="@+id/templateName"
+        android:layout_width="210dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/smsMessage"
+        android:layout_alignParentLeft="true"
 
-  <EditText
-      android:id="@+id/smsMessage"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_below="@id/phonesListView"
-      android:hint="@string/smsMessage"
-      />
+        android:hint="@string/templateName"/>
 
-  <EditText
-      android:id="@+id/templateName"
-      android:layout_width="200dp"
-      android:layout_height="wrap_content"
-      android:layout_below="@id/smsMessage"
-      android:hint="@string/templateName"
-      />
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/smsMessage"
+        android:layout_alignParentRight="true"
+        android:onClick="saveSMSTemplateClicked"
+        android:text="@string/save" />
+  </RelativeLayout>
 
-  <Button
-      android:id="@+id/saveButton"
-      android:layout_width="60dp"
-      android:layout_height="wrap_content"
-      android:layout_toRightOf="@id/templateName"
-      android:layout_below="@id/smsMessage"
-      android:layout_alignParentRight="true"
-      android:onClick="saveSMSTemplateClicked"
-      android:text="@string/save" />
+  <RelativeLayout
+      android:id="@+id/listViewContainer"
+      android:layout_below="@id/phonesText"
+      android:layout_above="@id/smsContainer"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content">
 
+    <ListView android:id="@+id/phonesListView"
+
+              android:layout_height="wrap_content"
+              android:longClickable="true"
+              android:layout_width="match_parent"/>
+  </RelativeLayout>
 </RelativeLayout>
