--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:orientation="vertical"
-                tools:context="com.exclus.smsshortcut.app.MainActivity">
+                tools:context="com.exclus.smsshortcut.app.AddActivity">
 
   <View android:id="@+id/strut"
         android:layout_width="0dp"
