--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -7,7 +7,7 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:gravity="bottom"
-                tools:context="com.exclus.smsshortcut.app.PreferencesActivity">
+                tools:context="com.exclus.smsshortcut.app.MainActivity">
 
 
   <Button
